Fix vertical alignment issues for diff content

--- a/app/styles/ui/_file-diff.scss
+++ b/app/styles/ui/_file-diff.scss
@@ -24,7 +24,7 @@
     border-right: 3px solid var(--diff-border-color);
   }
 
-  .before, .after, .text {
+  .before, .after, .diff-content-text {
     padding: var(--spacing-third) var(--spacing-half);
   }
 }
